--- a/Beer.css
+++ b/Beer.css
@@ -18,11 +18,6 @@
     padding: 0px !important;
 }
 
-#Red-div img, #Black-div img {
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-}
-
 #play-info, #play {
     background-color: #ecf0f1;
     color: #95a5a6;
@@ -61,19 +56,24 @@ button {
     box-shadow: 0 4px #999;
 }
 
-.four-card {
+.five-card {
     position: relative;
-    left: -50px;
+    left: 25%;
+}
+
+.four-card {
+    position: absolute;
+    left: 30%;
 }
 
 .three-card {
-    position: relative;
-    left: -100px;
+    position: absolute;
+    left: 35%;
 }
 
 .two-card {
-    position: relative;
-    left: -150px;
+    position: absolute;
+    left: 40%;
 }
 
 
