--- a/Beer.css
+++ b/Beer.css
@@ -20,7 +20,7 @@
 
 #play-info, #play {
     background-color: #ecf0f1;
-    color: #95a5a6;
+    color: #34495e;
     padding: 20px;
     margin: auto;
     margin-bottom: 40px;
